# fretboard

./: CLAUDE.md  Cargo.toml  README.md  index.html  rust-toolchain.toml
.cargo/: config.toml
android/res/values/: styles.xml
docs/android/: GOTCHA_egui_layout_width_doubling.md  KICKOFF_android_snail_build.md
src/: android_perm.rs  app.rs  audio.rs  fretboard.rs  lib.rs  main.rs  parse.rs  scale.rs  tests.rs  tuning.rs  types.rs  types_parse.rs
src/app/: controls.rs  drone_panel.rs  fretboard_panel.rs  live_analysis.rs  persist.rs  resonator_panel.rs  scale_finder.rs  workspace.rs
src/app/scale_finder/: controls.rs  mod.rs  panel.rs  solver.rs  wheel.rs
src/audio/: core.rs  mod.rs  native.rs  types.rs  wasm.rs  worker.rs  worker_proto.rs
src/audio/dsp/: analysis_math.rs  mod.rs  pitch.rs  resonator.rs  spectrum.rs
src/audio/native/: mod.rs
src/audio/native/imp/: analysis_math.rs  devices.rs  pitch.rs  resonator.rs  spectrum.rs
src/core_types/: chord.rs  mod.rs  note.rs  parse.rs  pitch.rs  scale.rs  scale_detect.rs  tuning.rs  types_parse.rs
src/core_types/scale_detect/: method_profile.rs  method_root.rs  method_set.rs  method_spiral.rs  mod.rs
src/ui/: draw_fretboard.rs  mod.rs  positions.rs  snail.rs  theme.rs
src/ui/fretboard/: draw.rs  mod.rs  positions.rs
src/ui/snail/: mod.rs
src/ui/waterfall/: mod.rs
