[package]
name = "fretboard"
version = "0.1.0"
edition = "2024"

[dependencies]
egui_tiles = "0.15"
itertools = { version = "0.14.0" }
serde_json.workspace = true
serde.workspace = true
nom = { version = "8.0" }

eframe.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
subsecond.workspace = true
dioxus-cli-config.workspace = true
tungstenite.workspace = true
cpal = "0.17.3"
rustfft = "6.4"
resonators = "0.1.0"
ringbuf = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { workspace = true, features = ["glow", "persistence"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement", "Element"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


[workspace.dependencies]
egui = "0.34.1"
eframe = { version = "0.34.1", features = ["persistence"] }
subsecond = "0.7.6"
dioxus-cli-config = "0.7.6"
tungstenite = { version = "0.29", features = ["native-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
