[package]
name = "fretboard"
version = "0.1.0"
edition = "2024"
default-run = "fretboard"

[lib]
crate-type = ["rlib"]

[dependencies]
egui_tiles = "0.15"
itertools = { version = "0.14.0" }
serde_json.workspace = true
serde.workspace = true
nom = { version = "8.0" }

eframe.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.18.1"
rustfft = "6.4"
resonators = "0.1.1"
ringbuf = "0.5"

[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
eframe = { workspace = true, features = ["accesskit", "wayland", "wgpu", "x11"] }
subsecond.workspace = true
dioxus-cli-config.workspace = true
tungstenite.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6.1", features = ["native-activity"] }
eframe = { workspace = true, features = ["android-native-activity", "wgpu"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { workspace = true, features = ["glow", "persistence"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement", "Element"] }

[package.metadata.android]
package = "com.fretboard.snail"
build_targets = ["aarch64-linux-android"]
resources = "android/res"
strip = "strip"

[package.metadata.android.application]
label = "Resonator Snail"
theme = "@style/AppTheme"

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 34

[package.metadata.android.application.activity]
config_changes = "orientation|screenSize|keyboardHidden"
exported = true
screen_orientation = "sensorLandscape"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


[workspace.dependencies]
egui = "0.34.3"
eframe = { version = "0.34.3", default-features = false, features = ["default_fonts", "persistence"] }
subsecond = "0.7.9"
dioxus-cli-config = "0.7.9"
tungstenite = { version = "0.29", features = ["native-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
