[package]
name = "fretboard"
version = "0.1.0"
edition = "2024"
# The bin target is named distinctly from the lib so the wasm/web build can
# disambiguate. On wasm `cargo` emits BOTH this bin's wasm and the lib's cdylib
# wasm (the cdylib exists for Android NativeActivity); trunk selects an artifact
# by target NAME, so the bin and lib must not both be named `fretboard`.
default-run = "fretboard-app"

[[bin]]
name = "fretboard-app"
path = "src/main.rs"

# rlib: consumed by the desktop/wasm `fretboard-app` bin (src/main.rs).
# cdylib: NativeActivity dlopen's `libfretboard.so` on Android — without it
# cargo-apk silently packages a stale leftover .so and your changes never ship.
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
egui_tiles = "0.15"
itertools = { version = "0.14.0" }
serde_json.workspace = true
serde.workspace = true
nom = { version = "8.0" }

eframe.workspace = true

[dev-dependencies]
# Direct handle on the same RON used by eframe storage, for the persistence round-trip test.
ron = "0.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.18.1"
rustfft = "6.4"
# Fork (PR jhartquist/resonators#6): adds OnePoleBank — the phasor-free, self-
# stabilizing core (~1.4–1.7× faster) plus an f64 de-rotation fix that keeps
# phase()/complex() accurate over a long session. We drive the snail's Δφ
# reassignment off phase(), so the f64 fix matters here. Pin to a rev so the
# build is reproducible; bump to the crates.io release once the PR lands.
resonators = { git = "https://github.com/enomado/resonators.git", branch = "onepole-bank" }
ringbuf = "0.5"

[target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
eframe = { workspace = true, features = ["accesskit", "wayland", "wgpu", "x11"] }
subsecond.workspace = true
dioxus-cli-config.workspace = true
tungstenite.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6.1", features = ["native-activity"] }
eframe = { workspace = true, features = ["android-native-activity", "wgpu"] }
# Runtime RECORD_AUDIO request (see src/android_perm.rs). jni/ndk-context are
# already in the tree transitively via cpal/android-activity.
jni = "0.22"
ndk-context = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { workspace = true, features = ["glow", "persistence"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement", "Element"] }

[package.metadata.android]
package = "com.fretboard.snail"
build_targets = ["aarch64-linux-android"]
resources = "android/res"
strip = "strip"

[package.metadata.android.application]
label = "Resonator Snail"
theme = "@style/AppTheme"

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 34

# Release-сборка (`cargo apk build --lib --release`) обязана быть подписана.
# Для локальных perf-/dev-прогонов подписываем стандартным debug-keystore
# (`~/.android/debug.keystore`, пароль "android" — публичный, не секрет). Это даёт
# оптимизированный (release-profile) APK без заведения отдельного релизного ключа;
# для публикации в стор нужен настоящий ключ — заменить path/пароль здесь.
[package.metadata.android.signing.release]
path = "/home/sc/.android/debug.keystore"
keystore_password = "android"

# Снейл питается с микрофона → без RECORD_AUDIO банк резонаторов молчит.
# Это dangerous-permission: на minSdk 26 / target 34 манифестной декларации мало,
# нужен ещё runtime-запрос (см. android_main), иначе AAudio отдаёт тишину.
[[package.metadata.android.uses_permission]]
name = "android.permission.RECORD_AUDIO"

[package.metadata.android.application.activity]
config_changes = "orientation|screenSize|keyboardHidden"
exported = true
orientation = "portrait"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


[workspace.dependencies]
egui = "0.34.3"
eframe = { version = "0.34.3", default-features = false, features = ["default_fonts", "persistence"] }
subsecond = "0.7.9"
dioxus-cli-config = "0.7.9"
tungstenite = { version = "0.29", features = ["native-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
